/* 
  Localizable.strings
  parking-rental-app

  Created by Никита Лисунов on 4/8/24.
  
*/

"launchSubtitle" = "It's never been\nso easy";
"login" = "Login";
"password" = "Password";
"enter" = "Enter";
"registration" = "Registration";
"name" = "Name";
"register" = "Register";
"registrationCarTitle" = "Set your car model and registry number";
"registrationCarSubtitle" = "To make reservations for it";
"continue" = "Continue";
"profile" = "Profile";
"floor" = "Floor";
"reserveLot" = "Reserve Lot";
"home" = "Home";
"more" = "More";
"availableBuildings" = "Available Buildings";
"date" = "Date";
"startTime" = "Start Time:";
"endTime" = "End Time:";
"reservationCardFreeFirstLineTitle" = "Book your car";
"reservationCardReservedFirstLineTitle" = "Your reserved car";
"reservationCardSecondLineTitle" = "Parking";
"zone" = "Zone";
"car" = "Car";
"timeSlot" = "Time Slot";
"cancelReservation" = "Cansel Reservation";
"logOut" = "Log Out";
"yourCarDetails" = "Your cars";
"updateCarTitle" = "Set new model\nand registry number";
"updateCarSubtitle" = "To update your car details";
"save" = "Save";
"language" = "Language";
"theme" = "Theme";
"cancel" = "Cancel";
"lightTheme" = "Always light mode";
"darkTheme" = "Always dark mode";
"systemTheme" = "Use system settings";
"logOutQuestion" = "Are you sure you want to log out?";
"connectionError" = "Connection Error";
"reload" = "Reload";
"noReservations" = "You don't have any reservations yet.";
"registrationCardLoadingFirstLineTitle" = "Loading";
"changeLanguageAlert" = "Go to device settings to change app language";
"settings" = "Settings";
"english" = "English";
"russian" = "Russian";
"light" = "Light";
"dark" = "Dark";
"device" = "Device";
"loginFailure" = "Incorrect e-mail or password";
"registrationFailure" = "Registration failure, try again";
"registrationCarSetupFailure" = "Car setup failure, try again";
"updateCarFailure" = "Car update failure, try again";
"reservationsLimit" = "Limit of 5 Lots Reached";
"reservationsLimitForTime" = "There's 1 lot for the time";
"reservationCardWeekendLimit" = "You can't book on weekends";
"account" = "Account";
"accountDetails" = "Account details";
"deleteAccount" = "Delete Account";
"deleteAccountQuestion" = "Are you sure you want to delete your account?";
"updateAccountDetails" = "Update Details";
"updateAccountTitle" = "Enter your\nnew details";
"updateAccountSubtitle" = "To update your account details";
"updateCarSuccess" = "Data was successfully updated";
"updateAccountSuccess" = "Data was successfully updated";
"updateAccountFailure" = "Details update failure, try again";
"cars" = "Cars";
"addNewCar" = "Add New Car";
"carDetails" = "Car Details";
"deleteCar" = "Delete Car";
"deleteCarQuestion" = "Are you sure you want to delete your car?\nAll corresponding reservations will also be deleted.";
"updateCarDetails" = "Update Details";
"addCarTitle" = "Set your car model and registry number";
"addCarSubtitle" = "To add new car";
"model" = "Model";
"addCarSetupFailure" = "Car adding failure, try again";
"settingsDetails" = "Appearance and language";
"FAQ" = "FAQ";
"FAQDetails" = "Frequently asked questions";
"question_1" = "How to reserve a parking space?";
"question_2" = "How many parking lots can I book in total?";
"question_3" = "How many cars I can have in my account?";
"answer_1" = "1. Open main screen\n2. Press \"Reserve Lot\" button\n3. Select building\n4. Select date/time/floor\n5. Select parking lot\n6. Select car\n7. Press \"Reserve Lot\" button\n\nThat's it, the space is reserved!";
"answer_2" = "You can reserve a maximum of 5 lots in each building.";
"answer_3" = "You can have a maximum of 3 cars.";
"extras" = "Extras";
"version" = "version 1.0";
"contactDevsButton" = "Contact developers";
"contactDevsTitle" = "Contact Developers";
"close" = "Close";
"letsGo" = "Let's Go";
"welcome" = "Welcome!";
"onboardingDescription" = "Welcome to Parking!\nRent parking spaces in the fastest and most convenient way possible.\n\nAnd have fun!";
