...
    }
    
    private func configureGithubButton() {
        self.view.addSubview(githubButton)
        githubButton.pinCenterX(to: self.view.centerXAnchor)
        githubButton.pinCenterY(to: self.view.centerYAnchor)
        githubButton.setText("GitHub", Colors.mainText.uiColor, .systemFont(ofSize: 20, weight: .medium))
        githubButton.setIcon(UIImage(systemName: "link.circle.fill") ?? UIImage(), Colors.active.uiColor, height: 80, width: 80)
        githubButton.pressAction = { [weak self] in
            self?.interactor.loadGitHubLink(ContactDevsModel.GitHubLink.Request())
        }
    }
    
...
